--- a/client/src/pages/LobbyRoom/LobbyRoomPage.scss
+++ b/client/src/pages/LobbyRoom/LobbyRoomPage.scss
@@ -349,6 +349,7 @@
   display: flex;
   gap: $space;
   margin-top: $space * 1.5;
+  margin-bottom: $space * 1.5;
 
   .button {
     gap: 4px;
